--- a/package.json
+++ b/package.json
@@ -11,16 +11,14 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "element-ui": "^2.0.7",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
+    "mint-ui": "2.2.13",
     "nprogress": "0.2.0",
-    "vue": "^2.5.9",
+    "vue": "^2.5.10",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.6",
+    "autoprefixer": "^7.2.2",
     "axios-mock-adapter": "^1.10.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -55,8 +53,8 @@
     "url-loader": "^0.6.2",
     "vue-loader": "^13.5.0",
     "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.9",
-    "webpack": "^3.9.0",
+    "vue-template-compiler": "^2.5.10",
+    "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.1",
     "webpack-dev-middleware": "^1.12.2",
     "webpack-hot-middleware": "^2.21.0",
