1.优化模板 2.尝试解决swiper bug (待续)
Signed-off-by: Amo <xiaomozyw@sina.com>

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "fastclick": "1.0.6",
     "mint-ui": "2.2.13",
     "nprogress": "0.2.0",
     "vue": "^2.5.10",
